Code cleanup
Signed-off-by: Dominik Schadow <dominikschadow@googlemail.com>