@@ -1,13 +1,12 @@
-//-----BEGIN DISCLAIMER-----
+// -----BEGIN DISCLAIMER-----
 /*******************************************************************************
-* Copyright (c) 2010 JCrypTool Team and Contributors
-*
-* All rights reserved. This program and the accompanying materials
-* are made available under the terms of the Eclipse Public License v1.0
-* which accompanies this distribution, and is available at
-* http://www.eclipse.org/legal/epl-v10.html
-*******************************************************************************/
-//-----END DISCLAIMER-----
+ * Copyright (c) 2010 JCrypTool Team and Contributors
+ *
+ * All rights reserved. This program and the accompanying materials are made available under the terms of the Eclipse
+ * Public License v1.0 which accompanies this distribution, and is available at
+ * http://www.eclipse.org/legal/epl-v10.html
+ *******************************************************************************/
+// -----END DISCLAIMER-----
 package org.jcryptool.crypto.modern.stream.dragon.algorithm;
 
 import java.io.BufferedInputStream;
@@ -36,105 +35,106 @@ import org.jcryptool.crypto.modern.stream.dragon.ui.DragonWizardPage.DisplayOpti
 
 /**
  * The DragonAlgorithmAction class is a specific implementation of AbstractAlgorithmAction
+ *
  * @see org.jcryptool.core.operations.algorithm.AbstractAlgorithmAction
  *
  * @author Tahir Kacak
  * @version 0.1
  */
-public class DragonAlgorithmAction extends AbstractAlgorithmAction{
+public class DragonAlgorithmAction extends AbstractAlgorithmAction {
 
-	/**
-	 * Constructor
-	 */
-	public DragonAlgorithmAction() {
-		super();
-	}
+    /**
+     * Constructor
+     */
+    public DragonAlgorithmAction() {
+        super();
+    }
 
-	/**
-	 * This method performs the action
-	 */
-	@Override
-	public void run() {
-		DragonWizard wizard = new DragonWizard();
-		WizardDialog dialog = new WizardDialog(getActiveWorkbenchWindow().getShell(), wizard);
-		dialog.setHelpAvailable(true);
+    /**
+     * This method performs the action
+     */
+    @Override
+    public void run() {
+        DragonWizard wizard = new DragonWizard();
+        WizardDialog dialog = new WizardDialog(getActiveWorkbenchWindow().getShell(), wizard);
+        dialog.setHelpAvailable(true);
 
-		int result = dialog.open();
+        int result = dialog.open();
 
-		if (result == Window.OK ) {
-			InputStream editorContent = getActiveEditorInputStream();
-			String key = wizard.getKey();
-			String iv = wizard.getIV();
-			byte[] keyArray;
-			byte[] ivArray;
+        if (result == Window.OK) {
+            InputStream editorContent = getActiveEditorInputStream();
+            String key = wizard.getKey();
+            String iv = wizard.getIV();
+            byte[] keyArray;
+            byte[] ivArray;
 
-			if (wizard.getIs128Bit()) {
-				if (wizard.getKeyFormatIsHexadecimal())
-					keyArray = hexTo128BitByteArray(key);
-				else
-					keyArray = bigIntegerTo128BitByteArray(new BigInteger(key, 2));
+            if (wizard.getIs128Bit()) {
+                if (wizard.getKeyFormatIsHexadecimal())
+                    keyArray = hexTo128BitByteArray(key);
+                else
+                    keyArray = bigIntegerTo128BitByteArray(new BigInteger(key, 2));
 
-				if (wizard.getIVFormatIsHexadecimal())
-					ivArray = hexTo128BitByteArray(iv);
-				else
-					ivArray = bigIntegerTo128BitByteArray(new BigInteger(iv, 2));
-			} else {
-				if (wizard.getKeyFormatIsHexadecimal())
-					keyArray = hexTo256BitByteArray(key);
-				else
-					keyArray = bigIntegerTo256BitByteArray(new BigInteger(key, 2));
+                if (wizard.getIVFormatIsHexadecimal())
+                    ivArray = hexTo128BitByteArray(iv);
+                else
+                    ivArray = bigIntegerTo128BitByteArray(new BigInteger(iv, 2));
+            } else {
+                if (wizard.getKeyFormatIsHexadecimal())
+                    keyArray = hexTo256BitByteArray(key);
+                else
+                    keyArray = bigIntegerTo256BitByteArray(new BigInteger(key, 2));
 
-				if (wizard.getIVFormatIsHexadecimal())
-					ivArray = hexTo256BitByteArray(iv);
-				else
-					ivArray = bigIntegerTo256BitByteArray(new BigInteger(iv, 2));
-			}
+                if (wizard.getIVFormatIsHexadecimal())
+                    ivArray = hexTo256BitByteArray(iv);
+                else
+                    ivArray = bigIntegerTo256BitByteArray(new BigInteger(iv, 2));
+            }
 
-			if (wizard.getDisplayOption() == DisplayOption.KEYSTREAM_ONLY) {
-				outputKeyStream(keyArray, ivArray, wizard);
-				return;
-			}
+            if (wizard.getDisplayOption() == DisplayOption.KEYSTREAM_ONLY) {
+                outputKeyStream(keyArray, ivArray, wizard);
+                return;
+            }
 
-			DragonAlgorithm algorithm = new DragonAlgorithm();
+            DragonAlgorithm algorithm = new DragonAlgorithm();
 
-			algorithm.init(editorContent, keyArray, ivArray);
+            algorithm.init(editorContent, keyArray, ivArray);
 
-			super.finalizeRun(algorithm);
+            super.finalizeRun(algorithm);
 
-			if (wizard.getDisplayOption() == DisplayOption.OUTPUT_AND_KEYSTREAM) {
-				IEditorInput keyStream = AbstractEditorService.createOutputFile(Messages.DragonAlgorithmAction_0, ".bin",
-				        ((SymmetricDataObject)algorithm.getDataObject()).getInputStream());
-				try {
-					getActiveWorkbenchWindow().getActivePage().openEditor(keyStream, IOperationsConstants.ID_HEX_EDITOR);
-				} catch (PartInitException e) {
-					MessageDialog.openError(getActiveWorkbenchWindow().getShell(),
-						Messages.DragonAlgorithmAction_1,
-						NLS.bind(Messages.DragonAlgorithmAction_2, IOperationsConstants.ID_HEX_EDITOR));
-				}
-			}
-		}
-	}
+            if (wizard.getDisplayOption() == DisplayOption.OUTPUT_AND_KEYSTREAM) {
+                IEditorInput keyStream =
+                        AbstractEditorService.createOutputFile(Messages.DragonAlgorithmAction_0, ".bin",
+                                ((SymmetricDataObject) algorithm.getDataObject()).getInputStream());
+                try {
+                    getActiveWorkbenchWindow().getActivePage().openEditor(keyStream, IOperationsConstants.ID_HEX_EDITOR);
+                } catch (PartInitException e) {
+                    MessageDialog.openError(getActiveWorkbenchWindow().getShell(), Messages.DragonAlgorithmAction_1,
+                            NLS.bind(Messages.DragonAlgorithmAction_2, IOperationsConstants.ID_HEX_EDITOR));
+                }
+            }
+        }
+    }
 
-	@Override
-	public void run(IDataObject dataobject) {
-		DragonAlgorithm algorithm = new DragonAlgorithm();
+    @Override
+    public void run(IDataObject dataobject) {
+        DragonAlgorithm algorithm = new DragonAlgorithm();
 
-		algorithm.dataObject = (SymmetricDataObject)dataobject;
+        algorithm.dataObject = (SymmetricDataObject) dataobject;
 
-		super.finalizeRun(algorithm);
-	}
+        super.finalizeRun(algorithm);
+    }
 
-	/**
-	 * Opens an editor to display keystream of given length.
-	 *
-	 * @param keyArray the keystream generator's key as a byte array
-	 * @param ivArray the keystream generator's IV as a byte array
-	 * @param wizard used to retrieve the number of bytes of keystream to generate
-	 */
-	private void outputKeyStream(byte[] keyArray, byte[] ivArray, DragonWizard wizard) {
-		int keyStreamByteCount = new Integer(wizard.getKeystreamLengthValue()).intValue();
+    /**
+     * Opens an editor to display keystream of given length.
+     *
+     * @param keyArray the keystream generator's key as a byte array
+     * @param ivArray the keystream generator's IV as a byte array
+     * @param wizard used to retrieve the number of bytes of keystream to generate
+     */
+    private void outputKeyStream(byte[] keyArray, byte[] ivArray, DragonWizard wizard) {
+        int keyStreamByteCount = new Integer(wizard.getKeystreamLengthValue()).intValue();
 
-		// check if key and IV are same length
+        // check if key and IV are same length
         if (keyArray.length != ivArray.length)
             throw new Error("key and IV length must be equal"); //$NON-NLS-1$
 
@@ -144,186 +144,190 @@ public class DragonAlgorithmAction extends AbstractAlgorithmAction{
         DragonKeyStreamGenerator keyStreamGenerator = new DragonKeyStreamGenerator();
 
         if (dragonKey.length == 4)
-        	keyStreamGenerator.dInit128(dragonKey, dragonIV);
+            keyStreamGenerator.dInit128(dragonKey, dragonIV);
         else if (dragonKey.length == 8)
-        	keyStreamGenerator.dInit256(dragonKey, dragonIV);
+            keyStreamGenerator.dInit256(dragonKey, dragonIV);
         else
-        	throw new Error("key and IV must be 128 bit or 256 bit"); //$NON-NLS-1$
+            throw new Error("key and IV must be 128 bit or 256 bit"); //$NON-NLS-1$
 
         byte[] keyStream = generateKeyStream(keyStreamByteCount, keyStreamGenerator);
         ByteArrayOutputStream keyStreamOutputStream = new ByteArrayOutputStream();
 
         try {
-        	keyStreamOutputStream.write(keyStream);
+            keyStreamOutputStream.write(keyStream);
         } catch (IOException e) {
             LogUtil.logError(DragonPlugin.PLUGIN_ID, e);
         }
 
-        IEditorInput keyStreamEditor = AbstractEditorService.createOutputFile(Messages.DragonAlgorithmAction_0, ".bin",
-                new BufferedInputStream(new ByteArrayInputStream(keyStreamOutputStream.toByteArray())));
+        IEditorInput keyStreamEditor =
+                AbstractEditorService.createOutputFile(Messages.DragonAlgorithmAction_0, ".bin",
+                        new BufferedInputStream(new ByteArrayInputStream(keyStreamOutputStream.toByteArray())));
 
-		try {
-			getActiveWorkbenchWindow().getActivePage().openEditor(keyStreamEditor, IOperationsConstants.ID_HEX_EDITOR);
-		} catch (PartInitException e) {
-			MessageDialog.openError(getActiveWorkbenchWindow().getShell(),
-			        Messages.DragonAlgorithmAction_1,
+        try {
+            getActiveWorkbenchWindow().getActivePage().openEditor(keyStreamEditor, IOperationsConstants.ID_HEX_EDITOR);
+        } catch (PartInitException e) {
+            MessageDialog.openError(getActiveWorkbenchWindow().getShell(), Messages.DragonAlgorithmAction_1,
                     NLS.bind(Messages.DragonAlgorithmAction_2, IOperationsConstants.ID_HEX_EDITOR));
-		}
-	}
+        }
+    }
 
-	/**
-	 * Generates an amount of keystream of given length.
-	 *
-	 * @param keyStreamByteCount the number of bytes of keystream to generate
-	 * @param keyStreamGenerator the generator with which the keystream is produced
-	 * @return the keystream as a byte array
-	 */
-	private byte[] generateKeyStream(int keyStreamByteCount, DragonKeyStreamGenerator keyStreamGenerator) {
-		int[] intKeyStream;
+    /**
+     * Generates an amount of keystream of given length.
+     *
+     * @param keyStreamByteCount the number of bytes of keystream to generate
+     * @param keyStreamGenerator the generator with which the keystream is produced
+     * @return the keystream as a byte array
+     */
+    private byte[] generateKeyStream(int keyStreamByteCount, DragonKeyStreamGenerator keyStreamGenerator) {
+        int[] intKeyStream;
 
         if (keyStreamByteCount % 4 == 0)
-        	intKeyStream = new int[keyStreamByteCount / 4];
+            intKeyStream = new int[keyStreamByteCount / 4];
         else
-        	intKeyStream = new int[(keyStreamByteCount / 4) + 1];
+            intKeyStream = new int[(keyStreamByteCount / 4) + 1];
 
         if (intKeyStream.length % 2 == 0) {
-	        for (int i = 0; i < intKeyStream.length / 2; i++) {
-	        	keyStreamGenerator.dGen();
-	        	intKeyStream[i * 2] = keyStreamGenerator.getA();
-	        	intKeyStream[(i * 2) + 1] = keyStreamGenerator.getE();
-	        }
+            for (int i = 0; i < intKeyStream.length / 2; i++) {
+                keyStreamGenerator.dGen();
+                intKeyStream[i * 2] = keyStreamGenerator.getA();
+                intKeyStream[(i * 2) + 1] = keyStreamGenerator.getE();
+            }
         } else {
-        	int i;
-        	for (i = 0; i < (intKeyStream.length / 2); i++) {
-	        	keyStreamGenerator.dGen();
-	        	intKeyStream[i * 2] = keyStreamGenerator.getA();
-	        	intKeyStream[(i * 2) + 1] = keyStreamGenerator.getE();
-	        }
-        	intKeyStream[i * 2] = keyStreamGenerator.getA();
+            int i;
+            for (i = 0; i < (intKeyStream.length / 2); i++) {
+                keyStreamGenerator.dGen();
+                intKeyStream[i * 2] = keyStreamGenerator.getA();
+                intKeyStream[(i * 2) + 1] = keyStreamGenerator.getE();
+            }
+            intKeyStream[i * 2] = keyStreamGenerator.getA();
         }
 
         return DragonEngine.intArrayToByteArray(intKeyStream);
-	}
+    }
 
-	/**
-	 * Converts a String representation of a hexadecimal number to an array of bytes with 16 elements.
-	 * The most significant bits are padded with 0's to fill 128 bits.
-	 *
-	 * @param hexadecimalNumberString the hexadecimal String to convert
-	 * @return a byte array of length 16, which represents the bytes of the String
-	 */
-	private byte[] hexTo128BitByteArray(String hexadecimalNumberString) {
-		byte[] byteOutputArray = new byte[16];
+    /**
+     * Converts a String representation of a hexadecimal number to an array of bytes with 16 elements. The most
+     * significant bits are padded with 0's to fill 128 bits.
+     *
+     * @param hexadecimalNumberString the hexadecimal String to convert
+     * @return a byte array of length 16, which represents the bytes of the String
+     */
+    private byte[] hexTo128BitByteArray(String hexadecimalNumberString) {
+        byte[] byteOutputArray = new byte[16];
         ArrayList<Byte> byteArrayList = new ArrayList<Byte>();
 
         if (hexadecimalNumberString.length() % 2 == 0) {
             for (int i = 0; i < (hexadecimalNumberString.length() / 2); i++)
-                byteArrayList.add(i, Integer.valueOf(hexadecimalNumberString.substring(i * 2, (i * 2) + 2), 16).byteValue());
+                byteArrayList.add(i,
+                        Integer.valueOf(hexadecimalNumberString.substring(i * 2, (i * 2) + 2), 16).byteValue());
 
             for (int i = 0; i < (16 - (hexadecimalNumberString.length() / 2)); i++)
-                byteArrayList.add(0, new Byte((byte)0));
+                byteArrayList.add(0, Byte.valueOf((byte) 0));
         } else {
             byteArrayList.add(0, Integer.valueOf("0" + hexadecimalNumberString.substring(0, 1), 16).byteValue()); //$NON-NLS-1$
 
             for (int i = 0; i < (hexadecimalNumberString.length() / 2); i++)
-                byteArrayList.add(i + 1, Integer.valueOf(hexadecimalNumberString.substring((i * 2) + 1, (i * 2) + 3), 16).byteValue());
+                byteArrayList.add(i + 1,
+                        Integer.valueOf(hexadecimalNumberString.substring((i * 2) + 1, (i * 2) + 3), 16).byteValue());
 
             for (int i = 0; i < (16 - ((hexadecimalNumberString.length() / 2) + 1)); i++)
-                byteArrayList.add(0, new Byte((byte)0));
+                byteArrayList.add(0, Byte.valueOf((byte) 0));
         }
 
         for (int i = 0; i < byteOutputArray.length; i++)
             byteOutputArray[i] = byteArrayList.get(i);
 
         return byteOutputArray;
-	}
+    }
 
-	/**
-	 * Converts a String representation of a hexadecimal number to an array of bytes with 32 elements.
-	 * The most significant bits are padded with 0's to fill 256 bits.
-	 *
-	 * @param hexadecimalNumberString the hexadecimal String to convert
-	 * @return a byte array of length 32, which represents the bytes of the String
-	 */
-	private byte[] hexTo256BitByteArray(String hexadecimalNumberString) {
-		byte[] byteOutputArray = new byte[32];
+    /**
+     * Converts a String representation of a hexadecimal number to an array of bytes with 32 elements. The most
+     * significant bits are padded with 0's to fill 256 bits.
+     *
+     * @param hexadecimalNumberString the hexadecimal String to convert
+     * @return a byte array of length 32, which represents the bytes of the String
+     */
+    private byte[] hexTo256BitByteArray(String hexadecimalNumberString) {
+        byte[] byteOutputArray = new byte[32];
         ArrayList<Byte> byteArrayList = new ArrayList<Byte>();
 
         if (hexadecimalNumberString.length() % 2 == 0) {
             for (int i = 0; i < (hexadecimalNumberString.length() / 2); i++)
-                byteArrayList.add(i, Integer.valueOf(hexadecimalNumberString.substring(i * 2, (i * 2) + 2), 16).byteValue());
+                byteArrayList.add(i,
+                        Integer.valueOf(hexadecimalNumberString.substring(i * 2, (i * 2) + 2), 16).byteValue());
 
             for (int i = 0; i < (32 - (hexadecimalNumberString.length() / 2)); i++)
-                byteArrayList.add(0, new Byte((byte)0));
+                byteArrayList.add(0, Byte.valueOf((byte) 0));
         } else {
             byteArrayList.add(0, Integer.valueOf("0" + hexadecimalNumberString.substring(0, 1), 16).byteValue()); //$NON-NLS-1$
 
             for (int i = 0; i < (hexadecimalNumberString.length() / 2); i++)
-                byteArrayList.add(i + 1, Integer.valueOf(hexadecimalNumberString.substring((i * 2) + 1, (i * 2) + 3), 16).byteValue());
+                byteArrayList.add(i + 1,
+                        Integer.valueOf(hexadecimalNumberString.substring((i * 2) + 1, (i * 2) + 3), 16).byteValue());
 
             for (int i = 0; i < (32 - ((hexadecimalNumberString.length() / 2) + 1)); i++)
-                byteArrayList.add(0, new Byte((byte)0));
+                byteArrayList.add(0, Byte.valueOf((byte) 0));
         }
 
         for (int i = 0; i < byteOutputArray.length; i++)
             byteOutputArray[i] = byteArrayList.get(i);
 
         return byteOutputArray;
-	}
+    }
 
-	/**
-	 * Converts a BigInteger to an array of bytes with 16 elements.
-	 * The most significant bits are padded with 0's if the byte array is too short.
-	 *
-	 * @param bigInt the BigInteger to convert
-	 * @return a byte array of length 16, which represents the bytes of the BigInteger
-	 */
-	private byte[] bigIntegerTo128BitByteArray(BigInteger bigInt) {
-		byte[] byteInputArray = bigInt.toByteArray();
+    /**
+     * Converts a BigInteger to an array of bytes with 16 elements. The most significant bits are padded with 0's if the
+     * byte array is too short.
+     *
+     * @param bigInt the BigInteger to convert
+     * @return a byte array of length 16, which represents the bytes of the BigInteger
+     */
+    private byte[] bigIntegerTo128BitByteArray(BigInteger bigInt) {
+        byte[] byteInputArray = bigInt.toByteArray();
 
-		if (byteInputArray.length == 16)
-			return byteInputArray;
+        if (byteInputArray.length == 16)
+            return byteInputArray;
 
-		byte[] byteOutputArray = new byte[16];
+        byte[] byteOutputArray = new byte[16];
 
-		ArrayList<Byte> byteArrayList = new ArrayList<Byte>();
-		for (int i = 0; i < byteInputArray.length; i++)
-			byteArrayList.add(i, new Byte(byteInputArray[i]));
+        ArrayList<Byte> byteArrayList = new ArrayList<Byte>();
+        for (int i = 0; i < byteInputArray.length; i++)
+            byteArrayList.add(i, Byte.valueOf(byteInputArray[i]));
 
-		for (int i = 0; i < (16 - byteInputArray.length); i++)
-			byteArrayList.add(0, new Byte((byte)0));
+        for (int i = 0; i < (16 - byteInputArray.length); i++)
+            byteArrayList.add(0, Byte.valueOf((byte) 0));
 
-		for (int i = 0; i < byteOutputArray.length; i++)
-			byteOutputArray[i] = byteArrayList.get(i);
+        for (int i = 0; i < byteOutputArray.length; i++)
+            byteOutputArray[i] = byteArrayList.get(i);
 
-		return byteOutputArray;
-	}
+        return byteOutputArray;
+    }
 
-	/**
-	 * Converts a BigInteger to an array of bytes with 32 elements.
-	 * The most significant bits are padded with 0's if the byte array is too short.
-	 *
-	 * @param bigInt the BigInteger to convert
-	 * @return a byte array of length 32, which represents the bytes of the BigInteger
-	 */
-	private byte[] bigIntegerTo256BitByteArray(BigInteger bigInt) {
-		byte[] byteInputArray = bigInt.toByteArray();
+    /**
+     * Converts a BigInteger to an array of bytes with 32 elements. The most significant bits are padded with 0's if the
+     * byte array is too short.
+     *
+     * @param bigInt the BigInteger to convert
+     * @return a byte array of length 32, which represents the bytes of the BigInteger
+     */
+    private byte[] bigIntegerTo256BitByteArray(BigInteger bigInt) {
+        byte[] byteInputArray = bigInt.toByteArray();
 
-		if (byteInputArray.length == 32)
-			return byteInputArray;
+        if (byteInputArray.length == 32)
+            return byteInputArray;
 
-		byte[] byteOutputArray = new byte[32];
+        byte[] byteOutputArray = new byte[32];
 
-		ArrayList<Byte> byteArrayList = new ArrayList<Byte>();
-		for (int i = 0; i < byteInputArray.length; i++)
-			byteArrayList.add(i, new Byte(byteInputArray[i]));
+        ArrayList<Byte> byteArrayList = new ArrayList<Byte>();
+        for (int i = 0; i < byteInputArray.length; i++)
+            byteArrayList.add(i, Byte.valueOf(byteInputArray[i]));
 
-		for (int i = 0; i < (32 - byteInputArray.length); i++)
-			byteArrayList.add(0, new Byte((byte)0));
+        for (int i = 0; i < (32 - byteInputArray.length); i++)
+            byteArrayList.add(0, Byte.valueOf((byte) 0));
 
-		for (int i = 0; i < byteOutputArray.length; i++)
-			byteOutputArray[i] = byteArrayList.get(i);
+        for (int i = 0; i < byteOutputArray.length; i++)
+            byteOutputArray[i] = byteArrayList.get(i);
 
-		return byteOutputArray;
-	}
+        return byteOutputArray;
+    }
 }
